# MathematiC

./: .gitignore  CMakeLists.txt  Doxyfile  INSTALL  Makefile  README.md  grammaire_language  imgui.ini  notes  rapport.md  test  wiki.md
cmake/: FindSDL2.cmake
doc/: MANUAL.md
doc/examples/: elaborate.matc  simple.matc
doc/html/: annotated.html  annotated_dup.js  classCurve-members.html  classCurve.html  classCurve.js  classFloatBox-members.html  classFloatBox.html  classFps-members.html  classFps.html  classFunction-members.html  classFunction.html  classFunction.js  classGraphSetup-members.html  classGraphSetup.html  classGraphSetup.js  classInstruction-members.html  classInstruction.html  classInstruction.js  classIntBox-members.html  classIntBox.html  classMainWindow-members.html  classMainWindow.html  classMainWindow.js  classMultiBox-members.html  classMultiBox.html  classMultiBox.js  classTestWindow-members.html  classTestWindow.html  classTestWindow.js  classes.html  curve_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_84fc5dba3506812825191c0c043e3c97.html  dir_84fc5dba3506812825191c0c043e3c97.js  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  files_dup.js  (+64 more)
img/: banner.xcf  logo.xcf
include/: curve.cpp  curve.h  function.hpp  interface.cpp  interface.hpp  mathGraph.cpp  mathGraph.hpp  multibox.cpp  multibox.h  tmp.h  zenity.cpp  zenity.hpp
language/: lexer.l  parser.y  test.txt
src/: calculette.l  calculette.y  main.c  main.cpp  test.cpp  test_gl.cpp  test_input.cpp  unit-tests.cpp
(+79 files in other folders)
